--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   </div>
 
   <div class="clr"></div>
-  <div id="isLoggedIn" style="color:#f68b1f;"></div>
+  <div id="isLoggedIn" style="color:#fff;"></div>
   <footer class="container-fluid text-center">
     <a href="#myPage" title="To Top"><span class="glyphicon glyphicon-chevron-up"></span></a>
     <div style="font-size:12px;font-weight: 600;margin-bottom: 20px;">@<font color="green">LINE</font> <font color="#002d63">Retail</font> 
