--- a/campaigns.html
+++ b/campaigns.html
@@ -94,7 +94,11 @@
   <main id="detail">
     <div class="container" style="margin-top:10px;">
       <div class="row">
+        <center>
+        <div><img src="./img/TNIRedeemPointCampaign.jpg" style="width:95%"></div>
+        </center>
 
+<!--
         <div class="col-lg-6 col-md-2 slide text-center" data-aos="fade-left">
         <div style="position: relative;"><img src="./img/campaigns-1.jpg" class="img-fluid" style="border-radius: 10px;width:90%;margin:10px;"></div>
         <div class="btn-t1" style="position: absolute; margin-top:-50px;font-size: 12px;right: 38px;" onclick="OpenLink(1)">คลิกดูรายละเอียด</div></div>
@@ -102,7 +106,7 @@
         <div class="col-lg-6 col-md-2 slide text-center" data-aos="fade-left">
         <div style="position: relative;"><img src="./img/campaigns-1.jpg" class="img-fluid" style="border-radius: 10px;width:90%;margin:10px;"></div>
         <div class="btn-t1" style="position: absolute; margin-top:-50px;font-size: 12px;right: 38px;" onclick="OpenLink(2)">คลิกดูรายละเอียด</div></div>
-
+-->
 
 
         <div class="clr"></div>
