--- a/rewards.html
+++ b/rewards.html
@@ -111,9 +111,25 @@
 
         <div id="DisplayShowRewards" style="display: none;"></div>
         <div id="DisplayNotOpen" style="display: none;"></div>
-
         <div id="DisplayRedeemRewards" style="display: none;"></div>
         <div id="DisplayDoneRewards" style="display: none;"></div>
+<!--
+        <div>
+
+             <table class="table table-bordered table-striped table-responsive-stack" style="margin:10px auto;width:95%;">
+              <thead class="thead-dark">
+               <tr>
+                  <th>รายการยืนยันการแลกรางวัล</th>
+               </tr>
+              </thead>
+              <tbody>
+               <tr>
+                  <td style="line-height: 1.3;">รหัสสินค้า<br>คะแนนที่แลก<br>วันที่แลก<br>วันที่ยืนยัน</td>
+               </tr>
+              </tbody>
+             </table>
+        </div>
+-->
         <div class="clr"></div>
       </div>
     </div>
