--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
         </button>
-        <a class="navbar-brand" href="index.html" style="font-size: 14px;">LINE Retail Society</a>
+        <a class="navbar-brand" href="index.html" style="font-size: 13px;">LINE Retail Society</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
@@ -80,38 +80,35 @@
       <div class="container">
         <div class="box-profile">
           <div id="MyProfile"></div>
-<!--
-          <center>
-          <div><img src="./img/test.jpg" class="add-profile"  style="margin:-70px auto 20px auto;"></div>
-          <div style="color:#002d63; font-size: 14px; font-weight: 600;"><center>สุวิทย์ ชัยรุ่งปัญญา</div>
-          <div style="color:#0056ff; font-size: 12px;padding:2px;font-weight: 600;line-height: 1.3;margin-bottom: 10px;">สาขาพระนครศรีอยุธยา<br>Zone-บางนา, RH3</div>
-          <div style="font-size: 12px; color:#f68b1f; margin:25px auto 5px auto;font-weight: 600;">อันดับ และผลคะแนนล่าสุดของคุณ<br><font color="#002d63"><b>ณ วันที่ 6 มีนาคม 2565</b></font></div>
-          <div class="btn-orange">อันดับคุณ<br>5</div>
-          <div class="btn-blue">ผลงานคุณ<br>4,089 คะแนน</div>
-          <div class="clr"></div>
-          <div style="font-size: 12px; color:#f68b1f; margin:25px auto 5px auto;font-weight: 600;">Point ที่คุณสามารถนำไปแลกเป็นของรางวัล<br>ตามความต้องการของคุณได้</div>
-          <div class="btn-black" style="margin-top:15px;" onclick="GotoRewards()">
-          <div>Point สำหรับแลกรางวัล</div>
-          <div style="font-size: 13px; font-weight: 600;">4,089 Point</div></div>
-          <div style="color:#888888; font-weight: 12px;margin:10px auto;">คลิกเพื่อไปแลกรางวัลกันเลย</div>
-          <div class="clr" style="height: 20px;"></div>
-          </center>
         </div>
--->
-<!--
-        <div class="section-title">
-          <center>
-            <div class="h3div" style="color:#0056ff;margin:30px auto 20px auto;">ข้อมูลผู้ใช้งาน TNI Redeem Point</div>
-            <div id="MyProfile"></div>
-          </center>
-        </div>
--->
       </div>
     </section>
     <div class="clr"></div>
   </main>
   <!-- End #main -->
 
+<div id="id01" class="w3-modal w3-animate-opacity">
+  <div class="w3-modal-content w3-card-4" style="background-color: #fff;">
+    <div class="w3-container" style="min-height:300px;padding:5px 30px;width:100%;text-align:center;max-width: 450px;margin:auto;">
+      <center>
+        <div style="margin-top:35px; color:#0056ff; font-size: 12px; font-weight: 600;">
+          ยินดีต้อนรับสู่<br>ระบบการแลกรางวัล TNI Redeem Point
+        </div>
+        <div class="icon-text" style="color:#999;"><br>ระบบ TNI Redeem Point เป็นระบบที่เพื่อนพนักงานสามารถตรวจสอบอันดับ คะแนนที่ทำได้ ตลอดจนการนำ Point มาแลกเป็นของรางวัลตามรอบที่กำหนด </div>
+        <div class="clr" style="height: 25px;"></div>
+        <div class="icon-left"><img src="./icon/icon-4.png"></div>
+        <div class="icon-right">ตรวจสอบอันดับ<div class="icon-text">คุณสามารถตรวจสอบอันดับการแข่งขันของคุณ
+ทุกๆค่าเบี้ยที่คุณขายได้ จะทำให้อันดับการแข่งขันของคุณสูงยิ่งขึ้น</div></div>
+        <div class="icon-left"><img src="./icon/icon-5.png"></div>
+        <div class="icon-right">ตรวจสอบผลงาน<div class="icon-text">คุณสามารถตรวจสอบคะแนนที่คุณทำได้ เพื่อวางแผนให้สามารถแลกรางวัลได้ </div></div>
+        <div class="icon-left"><img src="./icon/icon-1.png"></div>
+        <div class="icon-right">แลกของรางวัล<div class="icon-text">Point ที่คุณทำได้ สามารถนำมาแลกรางวัล เช่น เงินรางวัล, Product Apple และทริปท่องเที่ยว ตามรอบการเปิดให้แลก </div></div>
+        <div class="btn-t2" onclick="CloseAll()" style="margin:10px auto 25px auto;">ปิดหน้าต่างนี้</div>
+     </center>
+    </div>
+  </div>
+  <div class="clr" style="height: 70px;"></div>
+</div>
 
 
 <footer class="container-fluid text-center" style="margin-top:-70px;">
@@ -122,6 +119,7 @@
   </div>
   <div class="clr" style="height: 50px;"></div>
 </footer>
+
 
 
 <script src="./js/home.js"></script>
