--- a/rewards.html
+++ b/rewards.html
@@ -62,7 +62,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
         </button>
-        <a class="navbar-brand" href="index.html" style="font-size: 14px;">LINE Retail Society</a>
+        <a class="navbar-brand" href="index.html" style="font-size: 13px;">LINE Retail Society</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
@@ -88,13 +88,10 @@
       </div>
       <center>
         <div id="DisplayLastPoint"></div>
-        <!--<div class="btn-t2" style="margin-top:-18px;font-size: 14px;">1,234 คะแนน</div>-->
       </center>
     </section>
     <div class="clr"></div>
   </main>
-
-
   <main id="detail">
     <div class="container" style="margin-top:10px;">
       <div class="row">
@@ -108,34 +105,14 @@
           </div>
           </div>
         </center>
-
         <div id="DisplayShowRewards" style="display: none;"></div>
         <div id="DisplayNotOpen" style="display: none;"></div>
         <div id="DisplayRedeemRewards" style="display: none;"></div>
         <div id="DisplayDoneRewards" style="display: none;"></div>
-<!--
-        <div>
-
-             <table class="table table-bordered table-striped table-responsive-stack" style="margin:10px auto;width:95%;">
-              <thead class="thead-dark">
-               <tr>
-                  <th>รายการยืนยันการแลกรางวัล</th>
-               </tr>
-              </thead>
-              <tbody>
-               <tr>
-                  <td style="line-height: 1.3;">รหัสสินค้า<br>คะแนนที่แลก<br>วันที่แลก<br>วันที่ยืนยัน</td>
-               </tr>
-              </tbody>
-             </table>
-        </div>
--->
         <div class="clr"></div>
       </div>
     </div>
   </main>
-
-
   <!-- End #main -->
 
 
@@ -156,10 +133,12 @@
         </center>
           <div id="DisplayStockName"></div>
           <div id="DisplayStockDetail"></div>
+          <!--
           <div style="margin-top:15px;">
             <div class="txtpoint-1">แลกรางวัลไปแล้ว</div>
             <div class="txtpoint-2"><div class="btn-box" id="DisplayTotalRedeem"></div></div>
           </div>
+          -->
           <div style="margin-top:15px;">
             <div class="txtpoint-1">คะแนนล่าสุดของคุณ</div>
             <div class="txtpoint-2"><div class="btn-box" id="DisplayScorePoint"></div></div>
@@ -174,6 +153,10 @@
           </div>
       </div>
       <div class="clr" style="height: 10px;"></div>
+      <div style="color:#ff0000; font-size: 11px; text-align: left; line-height: 1.3;margin-bottom: 14px;">
+        <br><font color="#000000">คำเตือน : </font> 
+        <br>Point สำหรับการแลกรางวัลของท่านจะลดลงเมื่อท่านได้ทำการแลกของรางวัลตามรายการที่กำหนดไว้ 
+        ท่านจะไม่สามารถทำการยกเลิกการแลกของรางวัล และไม่สามารถเปลี่ยนแปลงใดๆ ได้อีก ขอให้ทำการตัดสินใจก่อน คลิก <font color="#000000">"ยืนยันแลกรางวัล"</font> ที่ปุ่มด้านล่าง</div>
       <center>
         <div class="btn-t1" onclick="ConfirmRedeem()" style="font-size: 11px;">ยืนยันแลกรางวัล</div>
         <div class="btn-t2" onclick="CloseAll()" style="font-size: 11px;">ยกเลิก</div>
