--- a/home.html
+++ b/home.html
@@ -33,8 +33,8 @@
   <div class="navbar1">
     <center>
       <div style="width:330px;">
-      <div class="iconlink" onClick="window.location='home.html';">
-        <div style="width:28px;"><img src="./img/home.png" style="width:22px;background: #002d63;"></div>
+      <div class="iconlink" onClick="window.location='home.html';" style="background: #002d63;">
+        <div style="width:28px;"><img src="./img/home.png" style="width:22px;"></div>
         <div style="font-size: 11px;">หน้าแรก</div>
       </div>
       <div class="iconlink" onClick="window.location='rewards.html';">
