--- a/rewards.html
+++ b/rewards.html
@@ -37,7 +37,7 @@
         <div style="width:28px;"><img src="./img/home.png" style="width:22px;"></div>
         <div style="font-size: 11px;">หน้าแรก</div>
       </div>
-      <div class="iconlink" onClick="window.location='rewards.html';">
+      <div class="iconlink" onClick="window.location='rewards.html';" style="background: #002d63;">
         <div style="width:28px;"><img src="./img/awards.png" style="width:22px;"></div>
         <div style="font-size: 11px;">รางวัล</div>
       </div>
