--- a/campaigns.html
+++ b/campaigns.html
@@ -45,7 +45,7 @@
         <div style="width:28px;"><img src="./img/leader.png" style="width:22px;"></div>
         <div style="font-size: 11px;">ตารางผู้นำ</div>
       </div>
-      <div class="iconlink" onClick="window.location='campaigns.html';">
+      <div class="iconlink" onClick="window.location='campaigns.html';" style="background: #002d63;">
         <div style="width:28px;"><img src="./img/campaign.png" style="width:22px;"></div>
         <div style="font-size: 11px;">แคมเปญ</div>
       </div>
@@ -62,7 +62,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
         </button>
-        <a class="navbar-brand" href="index.html" style="font-size: 14px;">LINE Retail Society</a>
+        <a class="navbar-brand" href="index.html" style="font-size: 13px;">LINE Retail Society</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
