--- a/closesystem.html
+++ b/closesystem.html
@@ -42,7 +42,7 @@
         <div class="row" style="text-align: center;">
           <div style="text-align: center;margin:30px auto 30px auto;"><img src="./img/close.gif"></div>
           <div style="color:#ff0000; font-weight: 600;">แจ้งปิดระบบเป็นการชั่วคราว</div>
-          <div style="text-align: left;max-width: 500px; line-height: 1.4; color:#0056ff;padding:20px 40px;font-size: 12px;">เรียน ทุกท่าน<br><br>เนื่องด้วยระบบข้อมูล TNI Redeem Point ใน Line @ Society มีปัญหา อยู่ระหว่างดำเนินการแก้ไข หากมีการเปลี่ยนแปลง จะแจ้งให้ทราบอีกครั้งนึงนะคะ<br><br>ต้องขออภัยมา ณ ที่นี้ด้วยค่ะ
+          <div style="margin:auto;text-align: left;max-width: 500px; line-height: 1.4; color:#0056ff;padding:20px 40px;font-size: 12px;">เรียน ทุกท่าน<br><br>เนื่องด้วยระบบข้อมูล TNI Redeem Point ใน Line @ Society มีปัญหา อยู่ระหว่างดำเนินการแก้ไข หากมีการเปลี่ยนแปลง จะแจ้งให้ทราบอีกครั้งนึงนะคะ<br><br>ต้องขออภัยมา ณ ที่นี้ด้วยค่ะ
 </div>
         </div>
       </div>
